[package]
name = "crab_compare"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
git2 = "0.18.3"
prettytable-rs = "0.10.0"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.12"
